<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="main_menu_general_search">General Search</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_actor_search">Actor Search</string>
    <string name="app_name">Movie Search</string>
    <string name="title_activity_actor_search">Actor Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="actor_search_include">Search for:</string>
    <string name="actor_search_exclude">Exclude:</string>
    <string name="actor_search_add_actor">Add new actor</string>
    <string name="title_activity_actor_subsearch">Actor Subsearch Activity</string>
    <string name="actor_subsearch_context_confirm">Use this actor</string>
    <string name="actor_subsearch_context_detail">View detailed information</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="execute_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_movie_search_temp">MovieSearchTemp</string>

</resources>